--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.johannes</groupId>
-    <artifactId>LSCTIC_Communication_SERVER</artifactId>
+    <artifactId>Citos-Server</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>jtc_server</name>
+    <name>Citos-Server</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <mainClass>lsctic.communication.server.LSCTIC_User_Server</mainClass>
+        <mainClass>citos.server.Citos_Start</mainClass>
     </properties>
     <build>
         <plugins>
