--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ cache:
     - '$HOME/.m2/repository'
 deploy:
   provider: releases
-  api_key:
-      secure: $GIT_SECURE
+  api_key: $GIT_APIKEY
   file: "/home/travis/build/Citos-CTI/Manager-Server/target/Citos-Server-1.0.1.jar"
   skip_cleanup: true
   on:
