--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
         <mainClass>citos.server.Citos_Start</mainClass>
     </properties>
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
