--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: java
-sudo: required
+sudo: false
 services:
-- docker
+  - docker
 dist: trusty
 install: true
 jdk:
-- oraclejdk8
+  - oraclejdk8
 addons:
 script:
   - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.host.url=https://sonarqube.com -Dsonar.organization=cicti -Dsonar.login=$SONAR_TOKEN
