--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: java
 sudo: false
 services:
-  - docker
+- docker
 dist: trusty
 install: true
 jdk:
-  - oraclejdk8
+- oraclejdk8
 addons:
 script:
   - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.host.url=https://sonarqube.com -Dsonar.organization=cicti -Dsonar.login=$SONAR_TOKEN
@@ -19,11 +19,12 @@ deploy:
   file: "/home/travis/build/Citos-CTI/Server/target/Citos-Server-1.0.jar"
   skip_cleanup: true
     on:
+      tags: true
       branches:
       - master
 after_success:
 - docker login -u $DOCKER_USER -p $DOCKER_PASS
-- export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH; fi`
+- export TAG='if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH; fi'
 - export IMAGE_NAME=johannes5117/citos-server
 - docker build -t $IMAGE_NAME:$COMMIT .
 - docker tag $IMAGE_NAME:$COMMIT $IMAGE_NAME:$TAG
